<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF8A80"
    tools:context="com.rezn.college.HomeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="78dp"
        android:background="#ffffff"
        android:text="@string/activity_4_step5"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="17dp"
        android:background="#f8bbd0"
        android:text="@string/note"
        android:textColor="#d50000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/activitystep5"
        android:textSize="24sp"
        android:background="#f8bbd0"
        android:textColor="#d50000"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/imageView5"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:src="@drawable/firstaid" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:src="@drawable/secondava" />

</RelativeLayout>
